# cmclient

./: CMakeLists.txt  gen_commands.py
.github/workflows/: release.yml
cmake/: InstallAndPackage.cmake
media/: CMakeLists.txt
media/baseset/: CMakeLists.txt
media/newgrf/: CMakeLists.txt
src/: command_func.h  command_type.h  company_base.h  company_cmd.cpp  company_cmd.h  company_func.h  company_gui.cpp  console_cmds.cpp  currency.cpp  currency.h  economy.cpp  economy_type.h  intro_gui.cpp  misc_cmd.cpp  misc_cmd.h  settings.cpp  settings_gui.cpp  settings_table.cpp  settings_table.h  settings_type.h  strings.cpp  survey.cpp  toolbar_gui.cpp  town_cmd.cpp  town_gui.cpp  vehicle_cmd.cpp
src/ai/: ai_instance.cpp
src/citymania/: cm_command_type.hpp
src/game/: game_instance.cpp
src/lang/: english.txt  russian.txt
src/network/: network.cpp  network_admin.cpp  network_admin.h  network_client.cpp  network_command.cpp  network_gui.cpp  network_internal.h  network_survey.cpp
src/network/core/: config.cpp  tcp_admin.cpp  tcp_admin.h
src/saveload/: company_sl.cpp  saveload.h  settings_sl.cpp
src/table/settings/: CMakeLists.txt  cmclient_settings.ini  difficulty_settings.ini  economy_settings.ini  if_settings.ini  locale_settings.ini  misc_settings.ini  network_private_settings.ini
src/widgets/: company_widget.h  intro_widget.h
